--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="public/assets/logo-dark-simple.png">
+
     <link rel="stylesheet" href="src/output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <title>ScribbleLabApp</title>
 </head>
 <body>
+    <noscript>You need to enable javascript in order to view this website</noscript>
+    <div id="notice-ribbon">
+        <p>
+            Currently in development, 
+            <a id="ribbon-link" href="https://github.com/orgs/ScribbleLabApp/porjects/1/view/2">check out the roadmap.</a>
+        </p>
+    </div>
     
 </body>
 </html>
