--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ScribbleLabApp</title>
   </head>
   <body>
+    <noscript>You need to enable javascript in order to view this website</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
